[package]
name = "rpc-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
infinisvm-logger = { workspace = true }
infinisvm-sync = { workspace = true }
infinisvm-db = { workspace = true }
infinisvm-core = { workspace = true }
infinisvm-jsonrpc = { workspace = true }
infinisvm-types = { workspace = true }
infinisvm-indexer = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
crossbeam-channel = { workspace = true }
hashbrown = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
klickhouse = { workspace = true }
jsonrpsee = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tower = { version = "0.4", features = ["full"] }
futures = "0.3"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
dashmap = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
tonic = { workspace = true }
solana-pubkey = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
pyroscope = { workspace = true, optional = true }
pyroscope_pprofrs = { workspace = true, optional = true }


tikv-jemallocator = { workspace = true }
cap = { version = "0.1.2", optional = true }
axum = { workspace = true, optional = true }
jemalloc_pprof = { version = "0.7", features = [
    "flamegraph",
    "symbolize",
], optional = true }



[features]
pyroscope = [
    "dep:pyroscope",
    "dep:pyroscope_pprofrs",
]

track_memory = ["dep:cap"]
track_oom = [
    "tikv-jemallocator/profiling",
    "tikv-jemallocator/unprefixed_malloc_on_supported_platforms",
    "dep:axum",
    "dep:jemalloc_pprof"
]
