[package]
name = "infinisvm-db"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
eyre = { workspace = true }
rocksdb = { workspace = true }
bincode = { workspace = true }
hashbrown = { workspace = true }
solana-hash = { workspace = true }
rayon = "1.8"
metrics = { workspace = true }

quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
tokio.workspace = true
crossbeam-channel.workspace = true
async-channel.workspace = true
bytes.workspace = true

infinisvm-logger = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "db_chain"
harness = false
