[package]
name = "infinisvm-db"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
eyre = { workspace = true }
bincode = { workspace = true }
hashbrown = { workspace = true }
solana-hash = { workspace = true }
rayon = "1.8"
metrics = { workspace = true }

crossbeam-channel = { workspace = true }
bytes = { workspace = true }

infinisvm-logger = { workspace = true }

object_store = { version = "0.12.0", features = ["aws"] }
tokio = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
