[package]
name = "infinisvm-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "std",
    "env-filter",
    "fmt",
    "smallvec",
    "chrono",
] }

metrics = { workspace = true }
