[package]
name = "infinisvm-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
crossbeam-channel = { workspace = true }
infinisvm-types = { workspace = true }
infinisvm-logger = { workspace = true }
infinisvm-db = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
rustls = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
eyre = { workspace = true }
zstd = { workspace = true }
metrics = { workspace = true }
memchr = "2"

# HTTP server dependencies
axum = { workspace = true }
tower = { version = "0.4", features = ["full"] }
tower-http = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
rayon = { workspace = true }        
indicatif = { workspace = true }    
futures-util = { workspace = true }
hashbrown = { workspace = true }
http = "1"
ed25519-dalek = "1.0"
tokio-rustls = "0.25"
base64 = { workspace = true }
hex = { workspace = true }
rcgen = "0.13.0"
tempfile = "3.10"

[dev-dependencies]
# Testing dependencies for retry functionality
rand = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }

[features]
# Optional features for testing
test-utils = []
