[package]
name = "infinisvm-types"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
eyre = { workspace = true }
hashbrown = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
async-trait = { workspace = true }
tokio-postgres = { workspace = true }
futures-util = { version = "0.3.14", features = ["sink"] }
futures-core = "0.3"
http = "1.0"
bytes = "1.0"
hyper = { version = "0.14", features = ["full"] }
# Enable HTTPS for bincode client
hyper-rustls = { version = "0.24", features = ["http2", "webpki-roots"] }
rustls-pemfile = "1.0"
rustls = "0.21"
tower = "0.4"
http-body-util = "0.1"
http-body = "1.0"
bb8-postgres = { version = "0.9.0" }
bb8 = { version = "0.9.0" }
cdrs-tokio = "8.1.6"
cassandra-protocol = "3.3.0"
object_store = { version = "0.12.0", features = ["aws"] }
zstd = "0.12"
sorted-vec = "0.8.6"
metrics = { workspace = true }
rayon = "1.5.1"
regex = "1.1.1"
solana-transaction-context = { workspace = true }
klickhouse = { workspace = true }
solana-hash = { workspace = true }
solana-pubkey = { workspace = true }
solana-svm = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
hex = "0.4"

# Build dependencies removed - using bincode for gRPC instead of protobuf
